RESOLVED FIXED225659
REGRESSION(r277262): test imported/w3c/web-platform-tests/css/selectors/focus-visible-002.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=225659
Summary REGRESSION(r277262): test imported/w3c/web-platform-tests/css/selectors/focus...
Carlos Garcia Campos
Reported 2021-05-11 09:50:57 PDT
This test is now crashing since r277262. r277261 TEXT (Expected: FAIL) [r277262-r277264] CRASH (Expected: FAIL) [r277265-r277267] UNKNOWN Craslog: https://build.webkit.org/results/GTK-Linux-64-bit-Debug-Tests/r277315%20(1048)/imported/w3c/web-platform-tests/css/selectors/focus-visible-002-crash-log.txt Program terminated with signal SIGSEGV, Segmentation fault. #0 g_type_check_instance_is_fundamentally_a (type_instance=type_instance@entry=0x561af58003d0, fundamental_type=fundamental_type@entry=80) at ../gobject/gtype.c:4082 4082 node = lookup_type_node_I (type_instance->g_class->g_type); [Current thread is 1 (Thread 0x7f97210a2200 (LWP 14256))] Thread 1 (Thread 0x7f97210a2200 (LWP 14256)): #0 g_type_check_instance_is_fundamentally_a (type_instance=type_instance@entry=0x561af58003d0, fundamental_type=fundamental_type@entry=0x50 [GObject]) at ../gobject/gtype.c:4082 #1 0x00007f9722962e82 in g_object_ref (_object=_object@entry=0x561af58003d0) at ../gobject/gobject.c:3389 #2 0x00007f97243aaddd in gtk_window_real_set_focus (window=<optimized out>, focus=0x561af55ed080 [WebKitWebViewBase]) at ../gtk/gtkwindow.c:8711 #9 0x00007f97229779c3 in <emit signal ??? on instance 0x561af55ed080 [WebKitWebViewBase] or 0x561af5882a50 [GtkWindow]> (instance=instance@entry=0x561af55ed080, signal_id=<optimized out>, detail=detail@entry=0) at ../gobject/gsignal.c:3553 #3 0x00007f972295df3f in g_closure_invoke (closure=closure@entry=0x561af506cef0, return_value=return_value@entry=0x0, n_param_values=2, param_values=param_values@entry=0x7ffe4d3fbd70, invocation_hint=invocation_hint@entry=0x7ffe4d3fbcf0) at ../gobject/gclosure.c:810 #4 0x00007f9722970769 in signal_emit_unlocked_R (node=node@entry=0x561af505bb70, detail=detail@entry=0, instance=instance@entry=0x561af5882a50, emission_return=emission_return@entry=0x0, instance_and_params=instance_and_params@entry=0x7ffe4d3fbd70) at ../gobject/gsignal.c:3780 #5 0x00007f9722977861 in g_signal_emit_valist (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>, var_args=var_args@entry=0x7ffe4d3fbf10) at ../gobject/gsignal.c:3497 #6 0x00007f97229779c3 in g_signal_emit (instance=<optimized out>, signal_id=<optimized out>, detail=<optimized out>) at ../gobject/gsignal.c:3553 #7 0x00007f972295e179 in _g_closure_invoke_va (closure=closure@entry=0x561af506dc60, return_value=return_value@entry=0x0, instance=instance@entry=0x561af55ed080, args=args@entry=0x7ffe4d3fc1e0, n_params=0, param_types=0x0) at ../gobject/gclosure.c:873 #8 0x00007f97229777df in g_signal_emit_valist (instance=0x561af55ed080, signal_id=<optimized out>, detail=0, var_args=var_args@entry=0x7ffe4d3fc1e0) at ../gobject/gsignal.c:3406 #10 0x00007f972439762a in gtk_widget_grab_focus (widget=0x561af55ed080 [WebKitWebViewBase]) at ../gtk/gtkwidget.c:8097 #11 0x00007f972bb596b0 in webkitWebViewBaseSynthesizeMouseEvent(_WebKitWebViewBase*, MouseEventType, unsigned int, unsigned short, int, int, unsigned int, int, WTF::String const&) (webViewBase=0x561af55ed080 [WebKitWebViewBase], type=MouseEventType::Press, button=1, buttons=256, x=96, y=444, modifiers=0, clickCount=1, pointerType=...) at ../../Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:2726
Attachments
Patch (1.96 KB, patch)
2021-05-11 09:54 PDT, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2021-05-11 09:54:18 PDT
EWS Watchlist
Comment 2 2021-05-11 09:55:27 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Carlos Garcia Campos
Comment 3 2021-05-13 02:53:30 PDT
Note You need to log in before you can comment on or make changes to this bug.