REGRESSION(r277262): test imported/w3c/web-platform-tests/css/selectors/focus-visible-002.html is crashing https://bugs.webkit.org/show_bug.cgi?id=225659

Reviewed by Adrian Perez de Castro.

Do not try to grab focus on WebView widget for synthesized mouse press and release events if the widget has
already the focus or is not the current toplevel focus widget.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseSynthesizeMouseEvent):

Canonical link: https://commits.webkit.org/237676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277428 268f45cc-cd09-0410-ab3c-d52691b4dbfc